--- a/iframe-common/pom.xml
+++ b/iframe-common/pom.xml
@@ -44,7 +44,7 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>1.18.6</version>
-            <scope>provided</scope>
+            <!--<scope>provided</scope>-->
         </dependency>
 
         <!-- Jodd Core tools and huge number of utilities. -->
